# coremanager

./: CMakeLists.txt  CPUSpeedManager  CPUSpeedManager.pro  Makefile  TESTING.md  build.sh  cpuspeedmanager.desktop  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  ui_mainwindow.h
